# hvat

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  Trunk.toml  about.hbs  about.toml  build.rs  image-decoder-worker-wrapper.js  index.html  manifest.json  sam2-onnx.js  sw.js
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/hvat_gpu/: Cargo.toml
crates/hvat_gpu/examples/: image_viewer.rs
crates/hvat_gpu/src/: bindings.rs  config.rs  context.rs  error.rs  lib.rs  pipeline.rs  shader.wgsl  texture.rs  uniform.rs  vertex.rs
crates/hvat_gpu/src/pipeline/: builder.rs  color.rs  hyperspectral.rs  mod.rs  texture.rs
crates/hvat_gpu/src/shaders/: color.wgsl  hyperspectral.wgsl  texture.wgsl
crates/hvat_ui/: Cargo.toml  Trunk.toml  index.html
crates/hvat_ui/examples/: collapsible.rs  comprehensive.rs  dropdown.rs  image_demo.rs  image_viewer.rs  scrollable.rs  widget_gallery.rs
crates/hvat_ui/src/: application.rs  callback.rs  color_pipeline.rs  constants.rs  context.rs  element.rs  event.rs  icon.rs  image.rs  layout.rs  layout_cache.rs  length.rs  lib.rs  macros.rs  main.rs  overlay.rs  renderer.rs  state.rs  text_metrics.rs  theme.rs  units.rs  widget.rs
crates/hvat_ui/src/demos/: basic.rs  collapsible.rs  comprehensive.rs  dropdown.rs  image_viewer.rs  input_widgets.rs  mod.rs  scrollable.rs  undo.rs
crates/hvat_ui/src/widgets/: button.rs  canvas.rs  collapsible.rs  color_picker.rs  color_swatch.rs  column.rs  config.rs  confirm_dialog.rs  container.rs  container_helpers.rs  context_menu.rs  dropdown.rs  file_tree.rs  flex.rs  flex_layout.rs  hyperspectral_image.rs  icon_button.rs  image.rs  image_viewer.rs  mod.rs  modal.rs  number_input.rs  overlay.rs  pan_zoom_image.rs  panel.rs  row.rs  scrollable.rs  scrollbar.rs  slider.rs  text.rs  text_core.rs  text_input.rs  titled_container.rs  tooltip.rs
examples/: hvat_main.rs  simple_app.rs
src/: annotation.rs  app.rs  color_utils.rs  config.rs  constants.rs  handlers.rs  hvat_app.rs  hyperspectral.rs  image_cache.rs  keybindings.rs  lib.rs  licenses.rs  main.rs  message.rs  native.rs  project.rs  theme.rs  ui_constants.rs  undo.rs  wasm.rs  wasm_file.rs  widget_state.rs  zoom_math.rs
src/data/: hyperspectral.rs  loader.rs  mod.rs
src/data/loaders/: image_loader.rs  mod.rs  npy_loader.rs
src/format/: auto_save.rs  error.rs  mod.rs  project.rs  registry.rs  traits.rs
src/format/formats/: coco.rs  hvat_json.rs  mod.rs  pascal_voc.rs  yolo.rs
src/format/formats/tests/: coco_tests.rs  hvat_json_tests.rs  mod.rs  pascal_voc_tests.rs  roundtrip_tests.rs  yolo_tests.rs
src/formats/: coco.rs  common.rs  datumaro.rs  error.rs  mod.rs  voc.rs  yolo.rs
src/hyperspectral/: data.rs  mod.rs
src/model/: annotation.rs  category.rs  mod.rs  tag.rs
src/sam2/: contour.rs  decoder.rs  decoder_wasm.rs  encoder.rs  encoder_wasm.rs  mod.rs  state.rs
src/state/: gpu.rs  gpu_cache.rs  idle_upload.rs  image_data.rs  mod.rs  native_decoder.rs  preload_types.rs  preload_worker.rs  project.rs  snapshot.rs  zip_import.rs
src/test_image/: ascii_art.rs  font.rs  mod.rs
src/ui/: context_menu.rs  export_dialog.rs  image_viewer.rs  left_sidebar.rs  mod.rs  right_sidebar.rs  settings.rs  topbar.rs
src/views/: counter.rs  helpers.rs  home.rs  image_viewer.rs  mod.rs  settings.rs
