[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "hvat"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["fjodborg <github.com/fjodborg>"]
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
default-run = "hvat-native"

[dependencies]
hvat_ui = { path = "crates/hvat_ui" }
hvat_gpu = { path = "crates/hvat_gpu" }

# Core module dependencies
ndarray = "0.15"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
log = "0.4"
web-time = "1.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Event",
    "EventTarget",
    "Element",
    "HtmlElement",
    "ProgressEvent",
    # File System Access API for folder picker
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandle",
    "FileSystemHandleKind",
    # LocalStorage for config persistence
    "Storage",
    # Performance API for timing
    "Performance",
    # Canvas and ImageBitmap for async image preloading
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    "ImageData",
    # Web Worker for async image decoding
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "console",
] }
winit = "0.29"
wgpu = "27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"
winit = "0.29"
wgpu = "27"
rfd = "0.15"
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.rfd]
version = "0.15"

[lib]
crate-type = ["cdylib", "rlib"]

# Main application binary - this is the default when running `cargo run`
# Named hvat-native to distinguish from the hvat library crate (used for WASM)
[[bin]]
name = "hvat-native"
path = "src/main.rs"

# Image decoder Web Worker - WASM only, used for background image decoding
# On native, this binary just prints an error and exits (see image_decoder_worker.rs)
[[bin]]
name = "image-decoder-worker"
path = "src/bin/image_decoder_worker.rs"

# Production release: fully optimized, small binary (slowest to compile)
# Build with: cargo build --release
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Fast release build: good optimizations, faster compile times
# Build with: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
strip = "symbols"
panic = "unwind"

# Release with debug symbols for profiling (function names in browser DevTools)
# Build with: cargo build --profile release-debug
[profile.release-debug]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
lto = false
codegen-units = 16
panic = "unwind"

[profile.dev]
# debug = true is already the default

[profile.dev.package."*"]
opt-level = 2

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
trivial_casts = "allow"
unused_qualifications = "allow"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
# ... (keeping other lints as they were, or simplified for brevity if acceptable, but better to keep them if I can read them from previous file. I will try to preserve them)
all = "warn"
