[workspace]
members = ["crates/*"]
# Exclude hvat_e2e from main repo - it lives in the private testing fork
exclude = ["crates/hvat_e2e"]
resolver = "2"

[package]
name = "hvat"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["fjodborg <github.com/fjodborg>"]
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
default-run = "hvat-native"

[features]
default = []
# SAM2 feature enables ONNX-based segmentation
# - Native: uses ort (ONNX Runtime) with download-binaries
# - WASM: uses onnxruntime-web via JavaScript (sam2-onnx.js)
# Note: ort is optional and only used on native
sam2 = ["ort"]

[dependencies]
hvat_ui = { path = "crates/hvat_ui" }
hvat_gpu = { path = "crates/hvat_gpu" }


# Core module dependencies
# Using ndarray 0.16 to match ort's dependency (avoids version mismatch errors)
ndarray = "0.16"
ndarray-npy = { version = "0.9", default-features = false }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
log = "0.4"
web-time = "1.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
# getrandom needs js feature for WASM (used by tract backend)
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Event",
    "EventTarget",
    "Element",
    "HtmlElement",
    "ProgressEvent",
    # File System Access API for folder picker
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandle",
    "FileSystemHandleKind",
    # LocalStorage for config persistence
    "Storage",
    # Performance API for timing
    "Performance",
    # Canvas and ImageBitmap for async image preloading
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    "ImageData",
    # Web Worker for async image decoding
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "console",
    # Fetch API for SAM2 model loading
    "Request",
    "Response",
    "Headers",
] }
winit = "0.29"
wgpu = "27"
# Note: WASM SAM2 uses onnxruntime-web via JavaScript (see sam2-onnx.js)

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"
winit = "0.29"
wgpu = "27"
rfd = "0.15"
dirs = "5.0"
# Native SAM2: use ONNX Runtime with auto-downloaded binaries
ort = { version = "2.0.0-rc.10", optional = true, default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies.rfd]
version = "0.15"

[lib]
crate-type = ["cdylib", "rlib"]

# Main application binary - this is the default when running `cargo run`
# Named hvat-native to distinguish from the hvat library crate (used for WASM)
[[bin]]
name = "hvat-native"
path = "src/main.rs"

# Image decoder Web Worker - WASM only, used for background image decoding
# On native, this binary just prints an error and exits (see image_decoder_worker.rs)
[[bin]]
name = "image-decoder-worker"
path = "src/bin/image_decoder_worker.rs"

# SAM2 encoder Web Worker - WASM only, optional (requires sam2 feature)
# Used for background SAM2 image encoding - downloads only when user enables SAM2
[[bin]]
name = "sam2-encoder-worker"
path = "src/bin/sam2_encoder_worker.rs"
required-features = ["sam2"]

# Production release: fully optimized, small binary (slowest to compile)
# Build with: cargo build --release
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Production release: fully optimized for small binary (slowest to compile)
# Build with: cargo build --profile release-small
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Fast release build: good optimizations, faster compile times
# Build with: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
strip = "symbols"
panic = "unwind"

# Release with debug symbols for profiling (function names in browser DevTools)
# Build with: cargo build --profile release-debug
[profile.release-debug]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
lto = false
codegen-units = 16
panic = "unwind"

[profile.dev]
# debug = true is already the default

[profile.dev.package."*"]
opt-level = 2

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
trivial_casts = "allow"
unused_qualifications = "allow"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
# ... (keeping other lints as they were, or simplified for brevity if acceptable, but better to keep them if I can read them from previous file. I will try to preserve them)
all = "warn"
