[package]
name = "hvat_gpu"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
winit = "0.30"

[dev-dependencies]
image = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document"] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "27"
pollster = "0.3"
env_logger = "0.11"
