[package]
name = "hvat_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
hvat_gpu = { path = "../hvat_gpu" }
winit = "0.29"
pollster = "0.3"
thiserror = "1.0"
bytemuck = { version = "1.20", features = ["derive"] }
glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
cosmic-text = "0.14"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27", features = ["webgl"] }
web-sys = { version = "0.3", features = ["console"] }
console_log = { version = "1.0", features = ["color"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "27"
env_logger = "0.11"
