[package]
name = "hvat_ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hvat_ui_example"
path = "src/main.rs"

[[example]]
name = "image_viewer"
path = "examples/image_viewer.rs"

[[example]]
name = "scrollable"
path = "examples/scrollable.rs"

[[example]]
name = "dropdown"
path = "examples/dropdown.rs"

[dependencies]
hvat_gpu = { path = "../hvat_gpu" }
winit = "0.30"
pollster = "0.3"
thiserror = "1.0"
bytemuck = { version = "1.20", features = ["derive"] }
glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
cosmic-text = "0.14"
log = "0.4"
web-time = "1.1"
resvg = "0.45"
tiny-skia = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27", features = ["webgl"] }
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement"] }
console_log = { version = "1.0", features = ["color"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "27"
env_logger = "0.11"
