[package]
name = "hvat_ui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
name = "hvat_ui_example"
path = "src/main.rs"

[[example]]
name = "scrollable"
path = "examples/scrollable.rs"

[[example]]
name = "dropdown"
path = "examples/dropdown.rs"

[[example]]
name = "collapsible"
path = "examples/collapsible.rs"

[[example]]
name = "image_viewer"
path = "examples/image_viewer.rs"

[[example]]
name = "comprehensive"
path = "examples/comprehensive.rs"

[dependencies]
hvat_gpu = { path = "../hvat_gpu" }
winit = "0.30"
pollster = "0.3"
thiserror = "1.0"
bytemuck = { version = "1.20", features = ["derive"] }
glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
cosmic-text = "0.14"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
web-time = "1.1"
resvg = "0.45"
tiny-skia = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27", features = ["webgl"] }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "DomRectReadOnly",
    # Drag-drop support
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "FileList",
    "FileReader",
    "ProgressEvent",
    "EventTarget",
    "Event",
    # FileSystem API for folder drag-drop
    "FileSystemEntry",
    "FileSystemFileEntry",
    "FileSystemDirectoryEntry",
    "FileSystemDirectoryReader",
] }
js-sys = "0.3"
console_log = { version = "1.0", features = ["color"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "27"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
